Fixed duplicate scrollbar in renderer page

--- a/frontend/src/pages/components/2D2/styles.css
+++ b/frontend/src/pages/components/2D2/styles.css
@@ -3,7 +3,6 @@
     width: 352px;
     height: 198px;
     margin: 0 auto;
-    outline: 1px solid #fff;
     transform: scale(2.9) translateY(6%);
     align-items: center;
 }
